# podcast-storage

./: .coverage  .gitignore  Dockerfile  README.md  main.py  pylintrc  pyproject.toml
.github/workflows/: ci.yml
docker/: docker-compose.yml
podcast_storage/: main.py
podcast_storage/routers/: file_storage_router.py  file_streaming_router.py  login_router.py  test_file_storage_router.py
routers/: file_storage_router.py  file_streaming_router.py
streaming_frontend/: audio_streaming.html  video_streaming.html
